fix: web responsive on mobile

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -47,18 +47,71 @@
   margin: 10px;
 }
 
-.title-post{
+.title-post {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   font-size: 14pt;
-  color: #21243D;
+  color: #21243d;
   font-weight: bold;
   height: 90px;
 }
-a{
+a {
   text-decoration: none;
-  color: #21243D;
+  color: #21243d;
 }
-a:hover{
+a:hover {
   text-decoration: underline;
+}
+.description {
+  text-align: justify;
+  margin-top: 40px;
+  padding-right: 40px;
+}
+
+@media screen and (max-width: 800px) {
+  .header-grid {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100vw;
+  }
+  .photo-container {
+    order: 1;
+  }
+  .info-container {
+    order: 2;
+  }
+  .container-header {
+    width: 100vw;
+    height: 100vh;
+    padding-top: 40px;
+  }
+  .header {
+    width: 100vw;
+    height: 100vh;
+    padding-top: 40px;
+  }
+  .description{
+    padding-left: 20px;
+    padding-right: 20px;
+    /* padding: 20px; */
+  }
+  .name, .job {
+    padding-top: 20px;
+    text-align: center;
+    /* margin: 20px; */
+    font-size: 20pt;
+  }
+  .container-recent-post{
+    display: flex;
+    flex-direction: column;
+    padding: 11px;
+  }
+  .post{
+    width: 90vw;
+    height: auto;
+    padding: 10px;
+    margin: auto;
+    margin-bottom: 10px;
+  }
 }
